@@ -2,7 +2,7 @@
 # Please keep this file sorted alphabetically.
 data/org.gnome.telegnome.gschema.xml
 src/gui.c
-src/menu.h
+[type: gettext/glade] src/menus.ui
 src/prefs.c
 src/view.c
 telegnome.desktop.in
